feat: add some elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title> CV мученика</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <nav class="nav">
+        </nav>
+    </div>
 </body>
 </html>
