feat: add some elements

--- a/index.html
+++ b/index.html
@@ -3,13 +3,207 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title> CV мученика</title>
+    <title>vecher v hatu</title>
 </head>
 <body>
-    <div class="wrapper">
-        <nav class="nav">
-        </nav>
+    <div class="container">
+       <header class="header">
+        <div class="wrapper">
+            <nav class="menu">
+                <ul class="menu__list">
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">contacts</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">about me</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">skills</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">code</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">projects</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">education</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">languages</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header> 
+    <main class="main">
+        <section class="main__info">
+            <div class="wrapper">
+                <div class="main__info-inside">
+                    <img src="/images/avatar.jpg" alt="avatar-pic" class="avatar">
+                    <div class="main__info-text">
+                        <h1 class="name">Anastasiya S.</h1>
+                        <h2 class="speciality">pre-junior Frontend developer</h2>
+                        <hr>
+                        <div class="contacts">
+                            <a href="https://discordapp.com/users/409399953719427074/" class="contacts__link">
+                                <img src="/images/discord.svg" alt="discord-icon" class="contacts__icon">
+                            </a>
+                            <a href="https://github.com/pepparonin" class="contacts__link">
+                                <img src="/images/github.svg" alt="github-icon" class="contacts__icon">
+                            </a>
+                            <a href="https://t.me/pepparonin" class="contacts__link">
+                                <img src="/images/telega.svg" alt="teegram-icon" class="contacts__icon">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about-me">
+            <div class="wrapper">
+                <h3 class="title">About me</h3>
+                <hr class="title__line">
+                <p class="about-me__text">
+                    I am 22 years old and I am a programmer by education. But during the education in my ✨sharaga✨ I played Dota 2 and BDO.  C++ and Java was a little bit difficult for me and absolutely all lections was too boring to listen. My course projects was made on Python with YouTube tutorials by Indian people. I have a little experience with using React but if you don’t have base knowledges in JS, HTML&CSS using web-frameworks is really waste of time. That’s why I’m here to start from absolutely 0.
+                </p>
+            </div>
+        </section>
+    </main>
     </div>
+    <div class="container kitty-back">
+        <div class="wrapper">
+            <div class="info-columns">
+                <section class="skills">
+                    <h3 class="title">Skills</h3>
+                    <hr class="title__line">
+                    <ul class="skills__list">
+                        <li class="skills__item">
+                            <h4 class="skills__item-name">HTML</h4>
+                            <div class="skills__item-rating">
+                                <span class="active"></span>
+                                <span class="active"></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </li>
+                        <li class="skills__item">
+                            <h4 class="skills__item-name">CSS</h4>
+                            <div class="skills__item-rating">
+                                <span class="active"></span>
+                                <span class="active"></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </li>
+                        <li class="skills__item">
+                            <h4 class="skills__item-name">JavaScript</h4>
+                            <div class="skills__item-rating">
+                                <span class="active"></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </li>
+                        <li class="skills__item">
+                            <h4 class="skills__item-name">React</h4>
+                            <div class="skills__item-rating">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </li>
+                        <li class="skills__item">
+                            <h4 class="skills__item-name">Git</h4>
+                            <div class="skills__item-rating">
+                                <span class="active"></span>
+                                <span class="active"></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+                <section class="code-example">
+                    <h3 class="title">Code Example</h3>
+                    <hr class="title__line">
+                    <code>
+                        let hello = 'Hello World!'
+                    </code> 
+                    <br>
+                    <code>
+                       console.log(hello) 
+                    </code>
+                </section>
+        </div>
+    </div>
+    </div>
+    <div class="container silly-dance">
+        <div class="wrapper">
+            <div class="info">
+                <section class="projects">
+                    <h3 class="title">Projects</h3>
+                    <hr class="title__line">
+                    <div class="projects__inner">
+                      <p class="projects__text">Projects in progress...</p>
+                        <img src="/images/busy-kitty.png" alt="busy-kitty" class="projects__img">  
+                    </div>
+                </section>
+                <div class="info-grid">
+                    <section class="education">
+                    <h3 class="title">Education</h3>
+                    <hr class="title__line">
+                    <div class="education__inner">
+                        <p class="time">
+                            2019-2023
+                        </p>
+                        <p class="university">
+                            Belarussian State Unversity of Informatics and Radioelectronics
+                        </p>
+                    </div>
+                </section>
+                <section class="languages">
+                    <h3 class="title">Languages</h3>
+                    <hr class="title__line">
+                    <div class="languages__inner">
+                        <ul class="lang__list">
+                            <li class="lang__item">Russian: native</li>
+                            <li class="lang__item">English: B1</li>
+                        </ul>
+                    </div>
+                </section>
+                </div>  
+            </div>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="wrapper">
+           <ul class="footer__list">
+                <li class="footer__item">
+                    <a href="https://github.com/pepparonin" class="github-link">
+                        <img src="/images/github.svg" alt="github" class="githublogo">
+                    </a>
+                </li>
+                <li class="footer__item">
+                    2024
+                </li>
+                <li class="footer__item">
+                    <a href="https://rs.school/courses/javascript-preschool-ru" class="rsschool_link">
+                        <img src="/images/rs-logo.svg" alt="rss-logo" class="rs-logo">
+                    </a>
+                </li>
+            </ul> 
+        </div>
+    </footer>
 </body>
 </html>
