--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
             <nav class="menu">
                 <ul class="menu__list">
                     <li class="menu__item">
-                        <a href="#" class="menu__link">contacts</a>
+                        <a href="#contacts" class="menu__link">contacts</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">about me</a>
+                        <a href="#about-me" class="menu__link">about me</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">skills</a>
+                        <a href="#skills" class="menu__link">skills</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">code</a>
+                        <a href="#code" class="menu__link">code</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">projects</a>
+                        <a href="#projects" class="menu__link">projects</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">education</a>
+                        <a href="#education" class="menu__link">education</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#" class="menu__link">languages</a>
+                        <a href="#languages" class="menu__link">languages</a>
                     </li>
                 </ul>
             </nav>
@@ -49,7 +49,7 @@
                         <h1 class="name">Anastasiya S.</h1>
                         <h2 class="speciality">pre-junior Frontend developer</h2>
                         <hr>
-                        <div class="contacts">
+                        <div class="contacts" id="contacts">
                             <a href="https://discordapp.com/users/409399953719427074/" class="contacts__link">
                                 <img src="/images/discord.svg" alt="discord-icon" class="contacts__icon">
                             </a>
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </section>
-        <section class="about-me">
+        <section class="about-me" id="about-me">
             <div class="wrapper">
                 <h3 class="title">About me</h3>
                 <hr class="title__line">
@@ -78,7 +78,7 @@
     <div class="container kitty-back">
         <div class="wrapper">
             <div class="info-columns">
-                <section class="skills">
+                <section class="skills" id="skills">
                     <h3 class="title">Skills</h3>
                     <hr class="title__line">
                     <ul class="skills__list">
@@ -134,7 +134,7 @@
                         </li>
                     </ul>
                 </section>
-                <section class="code-example">
+                <section class="code-example" id="code">
                     <h3 class="title">Code Example</h3>
                     <hr class="title__line">
                     <code>
@@ -151,7 +151,7 @@
     <div class="container silly-dance">
         <div class="wrapper">
             <div class="info">
-                <section class="projects">
+                <section class="projects" id="projects">
                     <h3 class="title">Projects</h3>
                     <hr class="title__line">
                     <div class="projects__inner">
@@ -160,7 +160,7 @@
                     </div>
                 </section>
                 <div class="info-grid">
-                    <section class="education">
+                    <section class="education" id="education">
                     <h3 class="title">Education</h3>
                     <hr class="title__line">
                     <div class="education__inner">
@@ -172,7 +172,7 @@
                         </p>
                     </div>
                 </section>
-                <section class="languages">
+                <section class="languages" id="languages">
                     <h3 class="title">Languages</h3>
                     <hr class="title__line">
                     <div class="languages__inner">
