feat: add some elements

--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
         <section class="main__info">
             <div class="wrapper">
                 <div class="main__info-inside">
-                    <img src="/images/avatar.jpg" alt="avatar-pic" class="avatar">
+                    <img src="../images/avatar.jpg" alt="avatar-pic" class="avatar">
                     <div class="main__info-text">
                         <h1 class="name">Anastasiya S.</h1>
                         <h2 class="speciality">pre-junior Frontend developer</h2>
                         <hr>
                         <div class="contacts" id="contacts">
                             <a href="https://discordapp.com/users/409399953719427074/" class="contacts__link">
-                                <img src="/images/discord.svg" alt="discord-icon" class="contacts__icon">
+                                <img src="../images/discord.svg" alt="discord-icon" class="contacts__icon">
                             </a>
                             <a href="https://github.com/pepparonin" class="contacts__link">
-                                <img src="/images/github.svg" alt="github-icon" class="contacts__icon">
+                                <img src="../images/github.svg" alt="github-icon" class="contacts__icon">
                             </a>
                             <a href="https://t.me/pepparonin" class="contacts__link">
-                                <img src="/images/telega.svg" alt="teegram-icon" class="contacts__icon">
+                                <img src="../images/telega.svg" alt="teegram-icon" class="contacts__icon">
                             </a>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                     <hr class="title__line">
                     <div class="projects__inner">
                       <p class="projects__text">Projects in progress...</p>
-                        <img src="/images/busy-kitty.png" alt="busy-kitty" class="projects__img">  
+                        <img src="../images/busy-kitty.png" alt="busy-kitty" class="projects__img">  
                     </div>
                 </section>
                 <div class="info-grid">
@@ -191,7 +191,7 @@
            <ul class="footer__list">
                 <li class="footer__item">
                     <a href="https://github.com/pepparonin" class="github-link">
-                        <img src="/images/github.svg" alt="github" class="githublogo">
+                        <img src="../images/github.svg" alt="github" class="githublogo">
                     </a>
                 </li>
                 <li class="footer__item">
@@ -199,7 +199,7 @@
                 </li>
                 <li class="footer__item">
                     <a href="https://rs.school/courses/javascript-preschool-ru" class="rsschool_link">
-                        <img src="/images/rs-logo.svg" alt="rss-logo" class="rs-logo">
+                        <img src="../images/rs-logo.svg" alt="rss-logo" class="rs-logo">
                     </a>
                 </li>
             </ul> 
